--- a/rpmbuild/SOURCES/appliance50/etc/skel/.config/xfce4/panel/genmon-11.rc
+++ b/rpmbuild/SOURCES/appliance50/etc/skel/.config/xfce4/panel/genmon-11.rc
@@ -1,5 +1,5 @@
-Command=/usr/bin/ip50 -xml
+Command=/usr/bin/version50 -xml
 UseLabel=0
-Text=IP address
+Text=version
 UpdatePeriod=5000
-Font=Sans 10
+Font=Sans Bold 10
