--- a/rpmbuild/SOURCES/appliance50/etc/skel/.config/autostart/appliance50.desktop
+++ b/rpmbuild/SOURCES/appliance50/etc/skel/.config/autostart/appliance50.desktop
@@ -2,11 +2,12 @@
 Encoding=UTF-8
 Version=0.9.4
 Type=Application
-Name=cs50
+Name=appliance50
 Comment=
 
 # http://inspirated.com/2009/07/02/workaround-for-autostarting-applications-in-a-particular-order-on-xfcegnomekde
-Exec=/bin/bash -c "/bin/sleep 3 && /usr/bin/xfwm4 --daemon --replace && /usr/bin/xfdesktop --reload"
+#Exec=/bin/bash -c "/bin/sleep 3 && /usr/bin/xfwm4 --daemon --replace && /usr/bin/xfdesktop --reload"
+Exec=nautilus --no-default-window
 
 StartupNotify=false
 Terminal=false
