Various fixes, about to move /etc/skel to /home/jharvard

--- a/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/appliance50.conf
+++ b/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/appliance50.conf
@@ -1,5 +1,9 @@
 # allow all overrides and options
-<Directory /home/jharvard/public_html /home/jharvard/vhosts>
+<Directory /home/jharvard/public_html>
+    AllowOverride All
+    Options All
+</Directory>
+<Directory /home/jharvard/vhosts>
     AllowOverride All
     Options All
 </Directory>
@@ -20,3 +24,6 @@ NameVirtualHost *:80
     VirtualDocumentRoot /home/jharvard/vhosts/%0/html
 
 </VirtualHost>
+
+# avoid favicon.ico errors in logs
+Alias /favicon.ico /var/www/icons/favicon.ico
