--- a/rpmbuild/SOURCES/appliance50/etc/skel/Desktop/Home.desktop
+++ b/rpmbuild/SOURCES/appliance50/etc/skel/Desktop/Home.desktop
@@ -2,6 +2,6 @@
 Version=1.0
 Encoding=UTF-8
 Name=Home
-Exec=nautilus --no-desktop $HOME
+Exec=nautilus --no-desktop
 Icon=user-home
 Type=Application
