Disabled welcome.conf

--- a/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/welcome.conf
+++ b/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/welcome.conf
@@ -4,11 +4,11 @@
 # the root URL.  To disable the Welcome page, comment
 # out all the lines below.
 #
-<LocationMatch "^/+$">
-    Options -Indexes
-    ErrorDocument 403 /error/noindex.html
-</LocationMatch>
-<LocationMatch "^/~jharvard/+$">
-    Options -Indexes
-    ErrorDocument 403 /error/noindex.html
-</LocationMatch>
+#<LocationMatch "^/+$">
+#    Options -Indexes
+#    ErrorDocument 403 /error/noindex.html
+#</LocationMatch>
+#<LocationMatch "^/~jharvard/+$">
+#    Options -Indexes
+#    ErrorDocument 403 /error/noindex.html
+#</LocationMatch>
