--- a/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/appliance50.conf
+++ b/rpmbuild/SOURCES/appliance50/etc/httpd/conf.d/appliance50.conf
@@ -1,3 +1,4 @@
+
 # allow all overrides and options
 <Directory /home/jharvard/public_html>
     AllowOverride All
@@ -20,8 +21,21 @@ NameVirtualHost *:80
     CustomLog /home/jharvard/logs/httpd/access_log vcommon
     ErrorLog /home/jharvard/logs/httpd/error_log
 
-    # include the server name in the filenames used to satisfy requests
-    VirtualDocumentRoot /home/jharvard/vhosts/%0/html
+    RewriteEngine On
+
+    # a ServerName derived from a Host: header may be any case at all
+    RewriteMap lowercase int:tolower
+
+    # VirtualDocumentRoot /home/jharvard/vhosts/%0/html
+    # http://httpd.apache.org/docs/2.2/vhosts/mass.html#simple.rewrite
+    RewriteCond %{REQUEST_URI} !^/phpMyAdmin [NC]
+    RewriteCond /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}} -d
+    RewriteRule ^/(.*)$ /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}}/html/$1 [L]
+
+    # DocumentRoot /home/jharvard/vhosts/localhost/html
+    RewriteCond %{REQUEST_URI} !^/phpMyAdmin [NC]
+    RewriteCond /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}} !-d
+    RewriteRule ^/(.*)$ /home/jharvard/vhosts/localhost/html/$1 [L]
 
 </VirtualHost>
 
