18 rev 4; fixes for apache and phpMyAdmin

--- a/updater/appliance50/etc/httpd/conf.d/appliance50.conf
+++ b/updater/appliance50/etc/httpd/conf.d/appliance50.conf
@@ -3,10 +3,12 @@
 <Directory /home/jharvard/public_html>
     AllowOverride All
     Options All
+    Require all granted
 </Directory>
 <Directory /home/jharvard/vhosts>
     AllowOverride All
     Options All
+    Require all granted
 </Directory>
 
 # VirtualHost will override httpd.conf defaults
