--- a/updater/appliance50/etc/httpd/conf.d/phpMyAdmin.conf
+++ b/updater/appliance50/etc/httpd/conf.d/phpMyAdmin.conf
@@ -2,37 +2,21 @@ Alias /phpMyAdmin /usr/share/phpMyAdmin
 Alias /phpmyadmin /usr/share/phpMyAdmin
 
 <Directory /usr/share/phpMyAdmin/>
-   Order Deny,Allow
-   Deny from All
-   Allow from 127.0.0.1
-   Allow from 10.0.0.0/8
-   Allow from 172.16.0.0/12
-   Allow from 192.168.0.0/16
+   Require ip 127.0.0.1 10.0.0.0/8 172.16.0.0/12 192.16.0.0/16
 </Directory>
 
 <Directory /usr/share/phpMyAdmin/setup/>
-   Order Deny,Allow
-   Deny from All
-   Allow from 127.0.0.1
-   Allow from 10.0.0.0/8
-   Allow from 172.16.0.0/12
-   Allow from 192.168.0.0/16
+   Require ip 127.0.0.1 10.0.0.0/8 172.16.0.0/12 192.16.0.0/16
 </Directory>
 
 <Directory /usr/share/phpMyAdmin/libraries/>
-   Order Deny,Allow
-   Deny from All
-   Allow from None
+   Require all denied
 </Directory>
 
 <Directory /usr/share/phpMyAdmin/setup/lib/>
-   Order Deny,Allow
-   Deny from All
-   Allow from None
+   Require all denied
 </Directory>
 
 <Directory /usr/share/phpMyAdmin/setup/frames/>
-   Order Deny,Allow
-   Deny from All
-   Allow from None
+   Require all denied
 </Directory>
