--- a/appliance50/etc/httpd/conf.d/appliance50.conf
+++ b/appliance50/etc/httpd/conf.d/appliance50.conf
@@ -32,12 +32,12 @@ NameVirtualHost *:80
     # http://httpd.apache.org/docs/2.2/vhosts/mass.html#simple.rewrite
     RewriteCond %{REQUEST_URI} !^/phpMyAdmin [NC]
     RewriteCond /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}} -d
-    RewriteRule ^/(.*)$ /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}}/html/$1 [L]
+    RewriteRule ^/(.*)$ /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}}/public/$1 [L]
 
     # DocumentRoot /home/jharvard/vhosts/localhost/html
     RewriteCond %{REQUEST_URI} !^/phpMyAdmin [NC]
     RewriteCond /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}} !-d
-    RewriteRule ^/(.*)$ /home/jharvard/vhosts/localhost/html/$1 [L]
+    RewriteRule ^/(.*)$ /home/jharvard/vhosts/localhost/public/$1 [L]
 
 </VirtualHost>
 
