--- a/appliance50/etc/my.cnf
+++ b/appliance50/etc/my.cnf
@@ -1,11 +1,13 @@
 [mysqld]
+character-set-server=utf8
+collation-server=utf8_unicode_ci
 datadir=/var/lib/mysql
+general-log=/home/jharvard/logs/mysqld/general.log
+log-error=/home/jharvard/logs/mysqld/error.log
+slow-query-log=/home/jharvard/logs/mysqld/slow.log
 socket=/var/lib/mysql/mysql.sock
-user=mysql
 symbolic-links=0
-general-log=/home/jharvard/logs/mysqld/localhost.log
-log-error=/home/jharvard/logs/mysqld/localhost.err
-slow-query-log=/home/jharvard/logs/mysqld/localhost-slow.log
+user=mysql
 
 [mysqld_safe]
 log-error=/var/log/mysqld.log
