--- a/appliance50/home/jharvard/.config/xfce4/panel/launcher-4/google-chrome.desktop
+++ b/appliance50/home/jharvard/.config/xfce4/panel/launcher-4/google-chrome.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Google Chrome
 GenericName=Web Browser
 Comment=Access the Internet
-Exec=/opt/google/chrome/google-chrome %U
+Exec=/opt/google/chrome/google-chrome --password-store=basic %U
 Terminal=false
 Icon=google-chrome
 Type=Application
