--- a/appliance50/etc/httpd/conf.d/appliance50.conf
+++ b/appliance50/etc/httpd/conf.d/appliance50.conf
@@ -1,4 +1,3 @@
-
 # allow all overrides and options
 <Directory /home/jharvard/public_html>
     AllowOverride All
@@ -38,6 +37,9 @@ NameVirtualHost *:80
     RewriteCond %{REQUEST_URI} !^/phpMyAdmin [NC]
     RewriteCond /home/jharvard/vhosts/${lowercase:%{SERVER_NAME}} !-d
     RewriteRule ^/(.*)$ /home/jharvard/vhosts/localhost/public/$1 [L]
+
+    # not production
+    SetEnv APPLICATION_ENV dev
 
 </VirtualHost>
 
