--- a/appliance50/etc/my.cnf
+++ b/appliance50/etc/my.cnf
@@ -3,6 +3,7 @@ character-set-server=utf8
 collation-server=utf8_unicode_ci
 datadir=/var/lib/mysql
 general-log=/home/jharvard/logs/mysqld/general.log
+log=/home/jharvard/logs/mysqld/queries.log
 log-error=/home/jharvard/logs/mysqld/error.log
 slow-query-log=/home/jharvard/logs/mysqld/slow.log
 socket=/var/lib/mysql/mysql.sock
